--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 * {
     box-sizing: border-box;
     font-family: 'Courier New', Courier, monospace;
-    color: cornsilk;
+    color: #24057a;
 }
 
 body {
-    background-color: black;
+    background-color:white;
     
 }
 
@@ -49,7 +49,7 @@ h1 {
 }
 
 .add-button {
-    background-color: rgb(71, 196, 71);
+background-color: #24057a;
     border: none;
     color: white;
     padding: 10px;
